src/layouts/index.scss
@import '../utils/_theme.scss';
@import '../utils/_mixins.scss';

::selection {
  background: $color-accent; /* WebKit/Blink Browsers */
  color: white;
}
::-moz-selection {
  background: $color-accent; /* Gecko Browsers */
  color: white;
}

body {
  font-family: 'Open Sans', Helvetica, Arial, sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 1rem;
  line-height: 1.5rem;
  vertical-align: baseline;
  color: $color-body;
}

h1,
h2,
h3,
h4,
h5,
h6, {
  font-family: Montserrat, Helvetica, Arial, sans-serif;
  font-weight: 400;
  color: $color-dark;
}

.main {
  padding: 1rem;
  @include breakpoint(md) {
    width: 60rem;
    margin: 0 auto;
  }
}

.accent-color {
  color: $color-accent !important;
}

.accent-hover {
  color: inherit;
  &:hover {
    color: $color-accent;
  }
}

.accent-bg {
  background-color: $color-accent !important;
}

.accent-border {
  border-color: $color-accent;
}

.custom-link {
  font-size: 0.875rem;
  text-decoration: none;
  text-transform: uppercase;
  font-family: Montserrat, Helvetica, Arial, sans-serif;
  font-weight: 400;
  letter-spacing: 2px;
}

.separator-below {
  &:after {
    content: "";
    position: absolute;
    display: block;
    bottom: -0.25rem;
    width: 2.125rem;
    height: 0.25rem;
    border-bottom: 1px solid $color-accent;
    border-top: 1px solid $color-accent;
  }
}

.arrow-after {
  &:after {
    content: " \2192";
  }
}

.form-field {
  font-size: .875rem;
  line-height: 1.5rem;
  letter-spacing: 1px;
  font-weight: normal;
  padding: .625rem 1.5rem;
  margin: 0 .625rem .625rem 0;
  display: inline-block;
  transition: all .2s ease-in-out;
  color: $color-dark;
  border: 2px solid $color-light;
}

.button {
  font-size: .875rem;
  line-height: 1.5rem;
  letter-spacing: 2px;
  font-weight: normal;
  text-transform: uppercase;
  padding: .625rem 1.5rem;
  margin: 0 .625rem .625rem 0;
  display: inline-block;
  cursor: pointer;
  transition: all .2s ease-in-out;
  font-family: Montserrat, Helvetica, Arial, sans-serif;
  background-color: $color-dark;
  color: white;
  border: 2px solid $color-dark;
  text-decoration: none;

  &:hover {
    background-color: transparent;
    color: $color-accent;
    border: 2px solid $color-accent;
  }

  &.disabled {
    border-color: $color-light;
    color: $color-light;
    background-color: white;
    cursor: not-allowed;
  }
}

.full-width {
  display: block;
  box-sizing: border-box;
  width: 100% !important;
}

.text-center {
  text-align: center !important;
}

.text-bold {
  font-weight: 600;
}

.flex {
  display: flex;
}

.page {
  @include breakpoint(lg) {
    .main-content {
      float: left;
      box-sizing: border-box;
      width: 64%;
      margin-top: 1rem;
    }

    .sidebar {
      float: right;
      box-sizing: border-box;
      width: 36%;
      padding-left: 2rem;
    }
  }

  blockquote {
    background-color: #f5f5f5;
    margin: 0;
    padding: 1.5rem;
    border-left: 4px solid $color-accent;
    font-style: italic;
    color: $color-light;
  }

  p,
  ul,
  ol {
    a {
      transition: color .2s ease-in-out;
      color: $color-body;
      text-decoration: none;
      padding-bottom: 1px;
      border-bottom: 1px solid $color-accent;
      &:hover {
        color: $color-accent;
        border-bottom: none;
      }
    }
  }
}


/**
 * For modern browsers
 * 1. The space content is one way to avoid an Opera bug when the
 *    contenteditable attribute is included anywhere else in the document.
 *    Otherwise it causes space to appear at the top and bottom of elements
 *    that are clearfixed.
 * 2. The use of `table` rather than `block` is only necessary if using
 *    `:before` to contain the top-margins of child elements.
 */
 .cf:before,
 .cf:after {
     content: " "; /* 1 */
     display: table; /* 2 */
 }

 .cf:after {
     clear: both;
 }

 /**
  * For IE 6/7 only
  * Include this rule to trigger hasLayout and contain floats.
  */
 .cf {
     *zoom: 1;
 }

